# VLA_benchmarking

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/eval_configs/: full_benchmark_eval.yaml
configs/policy_configs/: Gr00t.yaml  MolmoAct2.yaml  PI0.yaml  PI05.yaml
configs/task_configs/: apple_with_distractions.yaml  banana_into_bowl.yaml  banana_under_cloth.yaml  baseball_into_bucket.yaml  block_into_basket.yaml  bread_and_apple_into_bowl.yaml  bread_from_box.yaml  cloth_fold.yaml  drawer_close.yaml  language_ablation.yaml  open_box.yaml  red_items_into_pan.yaml
scripts/: compute_results.py  run_eval.py
src/VLA_benchmarking/: eval_control.py  eval_io.py  eval_planning.py  policy_clients.py  system_config.py
src/VLA_benchmarking/policy_clients/: abstract_policy_client.py  groot_client.py  molmoact_client.py  openpi_client.py
